<resources>
    <string name="app_name">TFT Buddy</string>
    <string name="Champions">\t\tChampions</string>
    <string name="OriginButtonString">Origin</string>
    <string name="ClassButtonStirng">Class</string>
    <string name="TeamBuilderButtonString">Team Builder</string>
    <string name="DropRatesButtonString">Drop Rates</string>
    <string name="ChampionHolderNumber">0/10\t\t</string>

    <string name="demon_6_text">(%1d) Demon - Attacks from Demons have a 40%% chance to burn 20 mana and return 45 to the attacker</string>
    <string name="demon_4_text">(%1d) Demon - Attacks from Demons have a 40%% chance to burn 20 mana and return 30 to the attacker</string>
    <string name="demon_2_text">(%1d) Demon - Attacks from Demons have a 20%% chance to burn 20 mana and return 15 to the attacker</string>

    <string name="dragon_2_text">(%1d) Dragon - Dragons take 83%% less Magic Damage</string>

    <string name="exile_1_text">(%1d) Exile - Exile\'s gain 100%% of HP as a shield when placed adjacent to no other units</string>

    <string name="glacial_2_text">(%1d) Glacial - 25%% chance to stun on hit for 2s</string>
    <string name="glacial_4_text">(%1d) Glacial - 35%% chance to stun on hit for 2s</string>
    <string name="glacial_6_text">(%1d) Glacial - 45%% chance to stun on hit for 2s</string>

    <string name="robot_1_text">(%1d) Robots - Robots start combat with full Mana</string>

    <string name="imperial_2_text">(%1d) Imperial - Double damage for 1 Imperial</string>
    <string name="imperial_4_text">(%1d) Imperial - Double damage for all Imperials</string>

    <string name="noble_3_text">(%1d) Noble - +70 Armor//Magic Resist and +35 life on hit for a random ally</string>
    <string name="noble_6_text">(%1d) Noble - +70 Armor//Magic Resist and +35 life on hit for team</string>

    <string name="ninja_1_text">(%1d) Ninja - +50%% attack damage for your Ninjas</string>
    <string name="ninja_4_text">(%1d) Ninja - +70%% attack damage for your Ninjas</string>

    <string name="pirate_3_text">(%1d) Pirate - Chance to get extra gold on PVP rounds</string>

    <string name="phantom_2_text">(%1d) Phantom - Set one enemy\'s HP to 100 at start of combat</string>

    <string name="wild_2_text">(%1d) Wild - Wild Allies build Fury (Max 5). Each stack gives 12%% Attack Speed</string>
    <string name="wild_4_text">(%1d) Wild - All Allies build Fury (Max 5). Each stack gives 12%% Attack Speed</string>

    <string name="void_3_text">(%1d) Void - Void units deal True Damage</string>

    <string name="yordle_3_text">(%1d) Yordle - Attacks on Yordles have 30%% chance to miss</string>
    <string name="yordle_6_text">(%1d) Yordle - Attacks on Yordles have 55%% chance to miss</string>

    <string name="assassin_3_text">(%1d) Assassin - +125%% crit damage for Assassins</string>
    <string name="assassin_6_text">(%1d) Assassin - +350%% crit damage for Assassins</string>

    <string name="blademaster_3_text">(%1d) Blademaster - 45%% chance on hit for Blademasters to attack 1 extra time</string>
    <string name="blademaster_6_text">(%1d) Blademaster- 45%% chance on hit for Blademasters to attack 2 extra times</string>
    <string name="blademaster_9_text">(%1d) Blademaster- 45%% chance on hit for Blademasters to attack 4 extra times</string>

    <string name="brawler_2_text">(%1d) Brawler - +300 health to Brawlers</string>
    <string name="brawler_4_text">(%1d) Brawler - +600 health to Brawlers</string>
    <string name="brawler_6_text">(%1d) Brawler - +1000 health to Brawlers</string>

    <string name="elementalist_3_text">(%1d) Elementalist - Elementalist gain double mana from attacks. \n At the start of combat, summon an Elemental</string>

    <string name="guardian_2_text">(%1d) Guardian - +50 Armor to  allies that are adjacent to Guardians</string>

    <string name="gunslinger_2_text">(%1d) Gunslinger - 50%% chance on hit to attack 1 additional target in range</string>
    <string name="gunslinger_4_text">(%1d) Gunslinger - 50%% chance on hit to attack 2 additional targets in range</string>
    <string name="gunslinger_6_text">(%1d) Gunslinger - 50%% chance on hit to attack 3 additional targets in range</string>

    <string name="knight_2_text">(%1d) Knight - Team blocks 15 damage from all sources</string>
    <string name="knight_4_text">(%1d) Knight - Team  blocks 30 damage from all sources</string>
    <string name="knight_6_text">(%1d) Knight - Team  blocks 55 damage from all sources</string>

    <string name="ranger_2_text">(%1d) Ranger - Every 3s, Rangers have a 25%% chance to double their attack speed for 3s</string>
    <string name="ranger_4_text">(%1d) Ranger - Every 3s, Rangers have a 65%% chance to double their attack speed for 3s</string>

    <string name="shapeshifter_3_text">(%1d) Shapeshifter - On transform gain 60%% max HP</string>
    <string name="shapeshifter_6_text">(%1d) Shapeshifter - On transform gain 120%% max HP</string>

    <string name="sorcerer_3_text">(%1d) Sorcerer - Sorcerers gain double mana from attacks. +40%% AP to all allies</string>
    <string name="sorcerer_6_text">(%1d) Sorcerer - Sorcerers gain double mana from attacks. +100%% AP to all allies</string>

    <string name="hextech_4_text">(%1d) Hextech - Disable enemy items for 8s within 2 hexes of the target at the start of combat</string>
    <string name="hextech_2_text">(%1d) Hextech - Disable enemy items for 8s within 1 hex of the target at the start of combat</string>


</resources>
